@@ -4,7 +4,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 5.4.10 - unreleased
 
 	Stephan Tesch
-	- md5.h: fix related to segfaults in vchkpw on Sparc64.
+	- md5.h: fix related to segfaults in vchkpw on Sparc64. [1144851]
 
 	Peter Seiderer
 	- vcdb.c: vauth_getpw() didn't check for invalid domain.
@@ -25,6 +25,8 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	- vlimits.c: print errors to stderr.
 	- vmoduser.c: add clarity to usage/help for bit flags.
 	- vcdb.c: be sure to close password file in vauth_getpw().
+	- md5.h: use cdb/uint32.h (built by configure)  for defining 
+	  uint32. [1144851]
 
 	Michael Bowe
 	- configure.in: fix typo of where the configure script says it
